src/test/deca/syntax/valid/09IfThenElseVar.deca

{
    int x = 1;
    int y = 0;    
    if (x < y) {
        println("KO"); 
    } 
    else{
        println("OK");
    }
}
