src/test/deca/syntax/invalid/sansObjets/invalidIf.deca
// Description:
//    tests de programme incorrect syntaxiquement (if invalide)
//
// Historique:
//    @DATE@

{

    int x = 5;
    if x < 7 {
        print("ok");
    }
}